[tool.poetry]
name = "api-video"
version = "0.1.0"
description = "Stream to mp3, mp4 .."
authors = ["minkj1992 <minkj1992@gmail.com>"]
license = "Apache2.0"
readme = "README.md"
packages = [{include = "api_video"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
yt-dlp = "^2023.7.6"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
fastapi-utils = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
